--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.548.0",
+    "keen-slider": "^6.8.6",
     "next": "16.0.0",
     "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
@@ -30,7 +28,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
