--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "highlight.js": "^11.11.1",
     "keen-slider": "^6.8.6",
     "next": "16.0.0",
     "ogl": "^1.0.11",
