--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy to GH Pages
 
 on:
   push:
     branches:
       - main
+      - v1
+      - dev
 
 permissions:
   contents: write
@@ -24,18 +26,33 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Set environment variables
+        run: |
+          branch=${GITHUB_REF##*/}
+          if [ "$branch" = "v1" ]; then
+            echo "NEXT_PUBLIC_BASE_PATH=/v1" >> $GITHUB_ENV
+            echo "DEST_DIR=v1" >> $GITHUB_ENV
+          elif [ "$branch" = "dev" ]; then
+            echo "NEXT_PUBLIC_BASE_PATH=/dev" >> $GITHUB_ENV
+            echo "DEST_DIR=dev" >> $GITHUB_ENV
+          else
+            echo "NEXT_PUBLIC_BASE_PATH=" >> $GITHUB_ENV
+            echo "DEST_DIR=." >> $GITHUB_ENV
+          fi
+
       - name: Build Next.js
         run: npm run build
         env:
-          NEXT_PUBLIC_BASE_PATH: /
+          NEXT_PUBLIC_BASE_PATH: ${{ env.NEXT_PUBLIC_BASE_PATH }}
 
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
           publish_branch: gh-pages
+          destination_dir: ${{ env.DEST_DIR }}
           cname: false
